<resources>
    <string name="app_name">Мир динозавров</string>
    <string name="library_activity">Жизнь в небе</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_trias">Триасский период</string>
    <string name="glavnaya">Главная</string>
    <string-array name="trias">
        <item>Целофизис</item>
        <item>Мусзавр</item>
        <item>Прокомпсогнат</item>
    </string-array>
    <string-array name="urs">
        <item>Дилофозавр</item>
        <item>Диплодок</item>
        <item>Зератозавр</item>
        <item>Стегозавр</item>
    </string-array>
    <string-array name="mel">
        <item>Анкилозавр</item>
        <item>Хазмозавр</item>
        <item>Галлимим</item>
        <item>Игуанодон</item>
        <item>Паразавралоф</item>
        <item>Спинозавр</item>
        <item>Теранозавр Рекс</item>
    </string-array>
    <string name="first_tabs">Главная</string>
    <string name="trias_tabs">Триас. период</string>
    <string name="urs_tabs">Юрский период</string>
    <string name="mel_tabs">Меловой период</string>
    <string name="company_name">Мир Динозавров</string>
    <string name="main_image_page">Главная картинка</string>
    <string name="main_text">Добро пожаловать в "Мир Динозавров"!
        Здесь вы найдете много интерсных фактов о динозаврах
        и периодах в которых они жили, и еще много интересного!
    </string>
    <string name="title_panel">Мир динозавров</string>
    <string name="tabs_plant">Растения древности</string>
    <string name="tabs_earth">Доисторическая Земля</string>
    <string name="tabs_records">Рекорды динозавров</string>
    <string name="tabs_finds">Находки архиологов</string>
    <string name="tabs_other">Другое</string>
    <string name="tabs_favor">Избранные сохранения</string>
    <string name="tabs_exit">Выход</string>
    <string name="open_drawer">Открыть</string>
    <string name="close_drawer">Закрыть</string>
    <string name="plant_description">
        Теплый и влажный климат юрского периода способствовал буйному развитию растительного мира планеты.
        Папоротникообразные, хвойные и цикадовые образовывали обширные болотистые леса.
        На побережье произрастали араукарии, туи, цикадовые. Папоротники и хвощи образовывали обширные лесные массивы.
        В начале юрского периода, около 195 млн. л.н. на всей территории северного полушария растительность была довольно однообразной.
        Но уже начиная с средины юрского периода, около 170-165 млн.л.н., образовались два (условных) растительных пояса: северный и южный.
        В северном растительном поясе преобладали гинкговые и травянистые папоротники. В юрский период гинкговые были распространены очень широко.
        Рощи гинкговых деревьев росли по всему поясу.
        В южном растительном поясе преобладали цикадовые и древовидные папоротники.
    </string>
    <string name="papor_description">
        Папоротники юрского периода и в наши дни сохранились в некоторых уголках дикой природы.
        Хвощи и плауны почти не отличались от современных.
        Места произростания папоротников и кордаитов юрского периода сейчас занимают тропические леса, состоящие в основном из сагавников.
        Саговники — класс голосеменных, преобладавший в зеленом покрове Земли юрского периода. Ныне они встречаются кое-где в тропиках и субтропиках.
        Под сенью этих деревьев бродили динозавры.
        Внешне саговники настолько похожи на невысокие (до 10-18 м) пальмы, что даже изначально были определены как пальмы в системе растений.
        В Юрский период так же распространены гинкго — листопадные (что необычно для голосеменных) деревья с кроной, похожей на дуб, и с
        небольшими веерообразными листьями. До наших дней сохранился только один вид — гинкго двулопастной.
        Первые кипарисовые и, возможно, еловые появляются именно в юркий период. Хвойные леса юрского периода были похожи на современные.
    </string>
    <string name="earth_description">
        Юрский период — один из самых характерных периодов мезозойской эры. Во многих отношениях он отличается от триасового,
        и главное заключается в том, что юра — это время типично морских условий в жизни континентов.
        Отмечаются две морские трансгрессии, которые одновременно охватили почти все континенты.
        Они проявились в конце раннеюрской и начале позднеюрской эпохи и разделялись отчетливой регрессией среднеюрской эпохи.
        Тектоническая жизнь на планете в течение юрского периода была более интенсивной, чем в триасе.
        Для этого периода типичны процессы складко- и горообразования, происходившие в результате столкновения литосферных плит,
        и крупные нарушения глыбового характера в пределах платформ и областей активизации. Образование горстовых поднятий и грабенов
        сопровождалось интенсивным наземным вулканизмом. Древнекиммерийский орогенез затронул отдельные районы Альпийско-Гималайского пояса
        (Пиренеи, Альпы, Карпаты, Крым, Кавказ, Тибет, Индокитай). Орогенические движения происходили в конце средней юры, но особой силы они
        достигли в позднеюрскую эпоху, когда охватили северные районы Тихоокеанской геосинклинального пояса.
    </string>
    <string name="earth1_description">
        В это же время Австралия и Антарктида отделились от Африки и Индии, и возникший новый Индийский океан соединился с восточной окраиной
        океана Тетис. Наиболее обширным в юрском периоде был Тихий океан. Его размеры даже превышали современные. Азия отделилась от Северной
        Америки океаническим бассейном. На западной окраине Северной Америки происходила интенсивная складчатость — так называемый невадийский
        орогенез, который по времени соответствовал позднекиммерийскому. Складкообразование сопровождалось внедрением крупных интрузий и
        высокотемпературным метаморфизмом. Образование невадийского пояса складчатости и батолитов было обусловлено процессом столкновения
        континента с островной дугой. Активная тектоническая жизнь непосредственно оказывала влияние на распределение морских бассейнов и
        рельеф земной поверхности. В начале поздней юры наступила одна из крупнейших мезозойских трансгрессий. В это время морские воды
        проникали по вновь образованным грабенообразным структурам далеко в глубь платформ. Море затопило не только значительную часть
        Евразии, Северной Америки, Южной Америки, но и восточное и западное побережье современной Африки, западное побережье Мадагаскара,
        Индию и Австралию. Однако в результате активизации тектонических движений в конце юрского периода в ряде районов наступила
        регрессия моря. Это обусловило не только обмеление морских бассейнов, но и возникновение обширных лагун и заливов с повышенной
        соленостью воды. Различная интенсивность тектонических движений привела к формированию разнообразных крупных форм рельефа земной поверхности.
        Максимальная глубина вновь образованных океанических бассейнов не превышала нескольких тысяч метров.
        В их пределах выделялись абиссальные и батиальные области, зоны материкового склона и обширные шельфовые участки, постепенно переходящие
        в эпиконтинентальные моря. Максимальная глубина последних составляла 400–500 м. Наиболее сложным и контрастным рельефом обладали области,
        испытавшие киммерийские движения. Для них были характерны неровное дно морских бассейнов, соседство глубоководных впадин с поднятыми
        участками дна и островными дугами, расчлененное побережье и сильно изрезанная береговая линия. Приморские низменности сравнительно быстро
        переходили в возвышенности и горные массивы, которые прорезывались многочисленными реками. Менее контрастный рельеф существовал на платформах.
        Лишь в центральных их частях располагались выровненные возвышенности и холмисто-увалистые равнины сменяющиеся аккумулятивными
        озерно-аллювиальными и озерно-дельтовыми приморскими низменностями.
    </string>
    <string name="records_dino">
        Прочтите, и вы узнаете, какие динозавры и по какой причине могли бы попасть в доисторическую книгу рекордов.
        Некоторыми из этих «рекордов» вы будете очень удивлены.
    </string>
    <string name="first_record">
        ЗУБАСТЫЕ ТВАРИ\n
        У взрослого человека во рту находятся 32 зуба. Позади беззубого клюва утконосого динозавра имеется гораздо
        больше зубов - по 480 в верхней и нижней челюстях.
    </string>
    <string name="second_record">
        САМЫЙ СИЛЬНЫЙ\n
        Анкилозавр , напоминавший телосложением танк и живший в Северной Америке в поздний меловой период,
        был буквально с головы до ног покрыт костяной броней.
    </string>
    <string name="third_record">
        САМЫЙ ТЯЖЕЛЫЙ\n
        По размерам скелетных останков, найденных в штате Колорадо, ученые подсчитали, что при жизни ультразавр, живший в
        Северной Америке в поздний меловой период, мог весить целых 55 тонн, то есть во много раз больше современного слона. Это,
        видимо, был один из самых высоких динозавров, ростом в шесть этажей. Судя по всему, динозавры некоторых видов вырастали большими и
        сильными, не употребляя в пищу мяса.
    </string>
    <string name="about1">
        Время обитания:\n
        Величина:\n
        Вес:\n
        Открыт:\n
        Значение:
    </string>
    <string name="muszavr_about">
        Поздний триас. период\n
        3 м в длинну\n
        150 кг \n
        1960 г, Аргентина\n
        Ящер-мышь

    </string>
    <string name="spravka1">
        Примечательно, что все известные факты относительно динозавров были открыты за последние 175 лет.
        До этого никто даже не знал, что на нашей планете когда-то жили динозавры.
        Было выдвинуто множество теорий
относительно родства динозавров и птиц. Палеонтологи сделали также несколько предположений
относительно того, почему
динозавры вымерли около 65 миллионов лет назад. В заключительном разделе нашей энциклопедии вы найдете немало удивительных сведений об этих доисторических животных. Здесь приведены некоторые факты относительно жизни на планете Земля в течение 165 миллионов лет
царствования динозавров. Осталось еще немало загадок,
на которые пока что ответов нет. Сумеют ли будущие поколения палеонтологов разгадать их? Если
ваш интерес к динозаврам со временем не угаснет, то, быть может, в один прекрасный день
именно вам удастся отыскать ответ хотя бы на некоторые из них.
    </string>
    <string name="fly">
        В своей книге Затерянный мир Артур Конан Дойл описал сцену, где герои видят
        птерозавра, чудом дожившего с доисторических времен до наших дней.\n
        Это было великолепное зрелище - не менее сотни огромных и страшных с виду созданий кружились над нами и
вопили, словно лягушки, все одновременно ..  - писал он.

    </string>
    <string name="fly2">
        Самые первые птерозавры возникли около 230 миллионов лет назад в триасский период, задолго до появления первых птиц. Хотя птерозавры сильно
        отличались от динозавров, некоторыеученые полагают, что они могут происходить от одних и тех же видов животных, обитавших на Земле в более
ранние эпохи. Некоторые птерозавры были огромными, другие - крошечными, не больше зяблика. У некоторых были сильные мышцы, с помощью которых они мог ли махать
        крыльями в полете.
    </string>
    <string name="see">
        В морской пучине
    </string>
</resources>