<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


<!--    Меню в панели-->

    <group android:checkableBehavior="single">
        <item
            android:title="@string/tabs_plant"
            android:id="@+id/plant"
            android:icon="@mipmap/ic_plant">
        </item>

        <item
             android:title="@string/tabs_earth"
             android:id="@+id/earth"
             android:icon="@mipmap/ic_earth">
        </item>

        <item
             android:title="@string/tabs_records"
             android:id="@+id/records"
             android:icon="@mipmap/ic_records">
        </item>

        <item
             android:title="@string/tabs_finds"
             android:id="@+id/finds"
             android:icon="@mipmap/ic_finds">
        </item>

    </group>

        <item android:title="@string/tabs_other">


    <menu>

        <item
                android:title="@string/tabs_favor"
                android:id="@+id/favor"
                android:icon="@mipmap/ic_favor">
        </item>

        <item
            android:title="@string/tabs_exit"
            android:id="@+id/exit"
            android:icon="@mipmap/ic_exit">
        </item>

    </menu>


        </item>
</menu>