<?xml version="1.0" encoding="utf-8"?>
<!--ГЛАВНАЯ СТРАНИЦА ДОЛЖНА ПРОКРУЧИВАТЬСЯ -->
<!--ПОЭТОМУ ДОБАВЛЯЕМ NestedScrollView-->
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">
<!--    УБИРАЕМ ОРИЕНТАЦИЮ-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_image_page"
            android:scaleType="centerCrop"
            android:src="@drawable/main_logo1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="16dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:gravity="center"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:textColor="?attr/actionModeSplitBackground"
                android:textSize="32sp" />

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/main_text"
                android:textColor="@android:color/widget_edittext_dark" />

        </LinearLayout>

    </FrameLayout>

</android.support.v4.widget.NestedScrollView>