<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nav_panel.EarthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar_main"
            android:id="@+id/toolbar"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:src="@drawable/up_logo"/>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="bottom"
                android:textSize="20sp"
                android:text="@string/tabs_earth"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </FrameLayout>

        <TextView
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earth_description"/>

        <ImageView
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:src="@drawable/eart"/>

        <TextView
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textStyle="bold"
            android:layout_marginBottom="80dp"
            android:layout_marginTop="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earth1_description"/>


    </LinearLayout>

</ScrollView>